# login-registration-system

./: .gitignore  CMakeLists.txt  README.md  cppcheck_report.txt  hello.cpp  hello.hpp
.github/workflows/: cmake.yml
database/: users.json
inc/: iPasswordHasher.hpp  iPasswordValidator.hpp  iUserDatabaseHandler.hpp  jsonUserDatabaseHandler.hpp  loginPasswordManager.hpp  md5PasswordHasher.hpp  passwordValidator.hpp  sha256PasswordHasher.hpp  user.hpp
src/: hello.cpp  jsonUserDatabaseHandler.cpp  loginPasswordManager.cpp  main.cpp  md5PasswordHasher.cpp  passwordValidator.cpp  sha256PasswordHasher.cpp  user.cpp
tests/: hello.ut.cpp  jsonUserDatabaseHandler.ut.cpp  loginPasswordManager.ut.cpp  md5PasswordHasher.ut.cpp  passwordValidator.ut.cpp  sha256PasswordHasher.ut.cpp  user.ut.cpp
tests/mocks/: mockPasswordHasher.hpp  mockPasswordValidator.hpp  mockUserDatabaseHandler.hpp
